--- a/apps/banker/package.json
+++ b/apps/banker/package.json
@@ -4,13 +4,11 @@
   "scripts": {
     "dev": "wrangler dev src/index.ts --local",
     "deploy": "wrangler deploy --minify src/index.ts",
-    "generate": "drizzle-kit generate:sqlite --schema=src/schema.ts",
-    "up": "drizzle-kit up:sqlite --schema=src/schema.ts",
     "logs": "wrangler tail"
   },
   "dependencies": {
     "@paypal/paypal-js": "^8.0.5",
-    "drizzle-orm": "^0.30.7",
+    "@repo/common": "workspace:^",
     "hono": "^4.1.3",
     "zod": "^3.22.4"
   },
@@ -18,7 +16,6 @@
     "@cloudflare/vitest-pool-workers": "^0.1.5",
     "@cloudflare/workers-types": "^4.20240208.0",
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "drizzle-kit": "^0.20.14"
+    "@repo/typescript-config": "workspace:*"
   }
 }
