--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
     "turbo": "latest",
     "wrangler": "using-keyword-experimental"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "neonctl": "^1.29.3"
   }
 }
