--- a/apps/statesman/package.json
+++ b/apps/statesman/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.9.1",
     "@repo/common": "workspace:*",
+    "@repo/lockbox": "workspace:^",
     "drizzle-orm": "^0.30.10",
     "hono": "^4.3.0",
     "tsx": "^4.9.0",
