--- a/apps/banker/wrangler.toml
+++ b/apps/banker/wrangler.toml
@@ -1,4 +1,4 @@
-name = "randobot-banker"
+name = "erpbot-banker"
 
 compatibility_date = "2024-04-03"
 compatibility_flags = ["nodejs_compat"]
@@ -13,6 +13,6 @@ port = 8082
 
 [[services]]
 binding = "Users"
-service = "randobot-statesman"
+service = "erpbot-statesman"
 entrypoint = "Users"
 
