--- a/apps/dropship/wrangler.toml
+++ b/apps/dropship/wrangler.toml
@@ -1,4 +1,4 @@
-name = "randobot-dropship"
+name = "erpbot-dropship"
 
 compatibility_date = "2024-04-03"
 compatibility_flags = ["nodejs_compat"]
@@ -12,15 +12,15 @@ port = 8089
 
 [[services]]
 binding = "Users"
-service = "randobot-statesman"
+service = "erpbot-statesman"
 entrypoint = "Users"
 
 [[services]]
 binding = "STATESMAN"
-service = "randobot-statesman"
+service = "erpbot-statesman"
 entrypoint = "Shipments"
 
 [[services]]
 binding = "STATESMAN"
-service = "randobot-statesman"
+service = "erpbot-statesman"
 entrypoint = "Addresses"
