--- a/apps/sheriff/wrangler.toml
+++ b/apps/sheriff/wrangler.toml
@@ -1,4 +1,4 @@
-name = "randobot-sheriff"
+name = "erpbot-sheriff"
 compatibility_date = "2024-04-03"
 compatibility_flags = ["nodejs_compat"]
 
@@ -11,7 +11,7 @@ port = 8080
 
 [[services]]
 binding = "Users"
-service = "randobot-statesman"
+service = "erpbot-statesman"
 entrypoint = "Users"
 
 [vars]
