--- a/apps/dropship/wrangler.toml
+++ b/apps/dropship/wrangler.toml
@@ -16,11 +16,11 @@ service = "erpbot-statesman"
 entrypoint = "Users"
 
 [[services]]
-binding = "STATESMAN"
+binding = "Shipments"
 service = "erpbot-statesman"
 entrypoint = "Shipments"
 
 [[services]]
-binding = "STATESMAN"
+binding = "Addresses"
 service = "erpbot-statesman"
 entrypoint = "Addresses"
