--- a/apps/sheriff/package.json
+++ b/apps/sheriff/package.json
@@ -9,13 +9,14 @@
   "dependencies": {
     "@repo/common": "workspace:*",
     "hono": "^4.1.3",
+    "hpke-js": "^1.2.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "@cloudflare/vitest-pool-workers": "^0.1.5",
     "@cloudflare/workers-types": "^4.20240208.0",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.12.8"
   }
 }
