--- a/apps/sheriff/package.json
+++ b/apps/sheriff/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@repo/common": "workspace:*",
+    "@repo/lockbox": "workspace:*",
     "hono": "^4.1.3",
     "hpke-js": "^1.2.7",
     "zod": "^3.22.4"
