--- a/packages/lockbox/package.json
+++ b/packages/lockbox/package.json
@@ -8,6 +8,7 @@
     "@hpke/chacha20poly1305": "^1.2.7",
     "@hpke/core": "^1.2.7",
     "@hpke/dhkem-x25519": "^1.2.7",
+    "hpke-js": "^1.2.7",
     "ulid-workers": "^2.1.0"
   },
   "main": "dist/index.js",
