--- a/apps/sheriff/package.json
+++ b/apps/sheriff/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@repo/common": "workspace:*",
     "@repo/lockbox": "workspace:*",
+    "@repo/cookie-auth": "workspace:*",
     "hono": "^4.1.3",
     "hpke-js": "^1.2.7",
     "zod": "^3.22.4"
