--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "turbo": "latest",
-    "wrangler": "using-keyword-experimental"
+    "wrangler": "^3.13.2"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
