--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,10 +9,8 @@ jobs:
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-      
-      - name: Install pnpm
-        run: npm install -g pnpm
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4.0.0
 
       - name: Build & Deploy Worker
         uses: cloudflare/wrangler-action@v3.5.0
