--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,5 +17,6 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          packageManager: pnpm
           preCommands: "turbo build"
           command: "pnpm -r deploy"
