--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,9 +12,18 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.0.0
 
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install
+
       - name: Build packages
         run: turbo build
-        
+
       # - name: Build & Deploy Worker
       #   uses: cloudflare/wrangler-action@v3.5.0
       #   with:
