--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Install turbo
+        run: pnpm install turbo --global
+
       - name: Build packages
         run: turbo build
 
